--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,13 +37,18 @@ dependencies:
       
   rflutter_alert: ^1.0.5
   cached_network_image: ^2.4.1
-  spring: ^1.0.4
+  spring: ^1.0.4 
   carousel_slider: ^2.1.0
+  flutter_html: ^1.3.0
+  photo_view: ^0.10.3
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+
+dependency_overrides:
+  flutter_svg: ^0.18.0
 
 dev_dependencies:
   flutter_test:
