--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   carousel_slider: ^2.1.0
   flutter_html: ^1.3.0
   photo_view: ^0.10.3
+  scroll_to_index:
 
 
   # The following adds the Cupertino Icons font to your application.
